igt@gem_exec_balancer@parallel subtests - fail - Failed assertion: map[0] == expected, error: 0 != 1024
Starting subtest: parallel-contexts
(gem_exec_balancer:1255) CRITICAL: Test assertion failure function check_bo, file ../tests/i915/gem_exec_balancer.c:2795:
(gem_exec_balancer:1255) CRITICAL: Failed assertion: map[0] == expected
(gem_exec_balancer:1255) CRITICAL: error: 0 != 1024
Subtest parallel-contexts failed.